@@ -1,6 +1,8 @@
-package dev.meyba.justWorld.world;
+package dev.meyba.justWorld.managers;
 
 import dev.meyba.justWorld.JustWorld;
+import dev.meyba.justWorld.other.WorldCreationResult;
+import dev.meyba.justWorld.other.WorldData;
 import org.bukkit.Bukkit;
 import org.bukkit.World;
 import org.bukkit.WorldCreator;
@@ -9,8 +11,9 @@ import org.bukkit.configuration.file.YamlConfiguration;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -29,7 +32,7 @@ public class WorldManager {
         loadWorldsData();
     }
 
-    public CompletableFuture<WorldCreationResult> createWorldAsync(WorldData worldData) {
+    public CompletableFuture<WorldCreationResult> createWorld(WorldData worldData) {
         return CompletableFuture.supplyAsync(() -> {
             long startTime = System.currentTimeMillis();
 
@@ -58,7 +61,7 @@ public class WorldManager {
         });
     }
 
-    public CompletableFuture<World> loadWorldAsync(String worldName) {
+    public CompletableFuture<World> loadWorld(String worldName) {
         return CompletableFuture.supplyAsync(() -> {
             WorldData data = worldDataMap.get(worldName);
             if (data == null) {
@@ -90,14 +93,14 @@ public class WorldManager {
         });
     }
 
-    public CompletableFuture<Boolean> unloadWorldAsync(String worldName) {
+    public CompletableFuture<Boolean> unloadWorld(String worldName) {
         return CompletableFuture.supplyAsync(() -> {
             try {
                 return Bukkit.getScheduler().callSyncMethod(plugin, () -> {
                     World world = Bukkit.getWorld(worldName);
                     if (world == null) return false;
 
-                    World spawnWorld = Bukkit.getWorlds().get(0);
+                    World spawnWorld = Bukkit.getWorlds().getFirst();
                     world.getPlayers().forEach(player ->
                         player.teleport(spawnWorld.getSpawnLocation())
                     );
@@ -115,8 +118,8 @@ public class WorldManager {
         });
     }
 
-    public CompletableFuture<Boolean> deleteWorldAsync(String worldName) {
-        return unloadWorldAsync(worldName).thenApplyAsync(success -> {
+    public CompletableFuture<Boolean> deleteWorld(String worldName) {
+        return unloadWorld(worldName).thenApplyAsync(success -> {
             if (!success) return false;
 
             worldDataMap.remove(worldName);
@@ -130,17 +133,149 @@ public class WorldManager {
         });
     }
 
-    public CompletableFuture<Void> loadAllWorldsAsync() {
+    public CompletableFuture<Void> loadAllWorlds() {
         List<CompletableFuture<World>> futures = new ArrayList<>();
 
         worldDataMap.values().stream()
                 .filter(WorldData::autoLoad)
-                .forEach(data -> futures.add(loadWorldAsync(data.name())));
+                .forEach(data -> futures.add(loadWorld(data.name())));
 
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenRun(() -> plugin.getLogger().info(
-                        "Loaded " + futures.size() + " worlds asynchronously!"
+                        "Loaded " + futures.size() + " worlds!"
                 ));
+    }
+
+    public CompletableFuture<Boolean> cloneWorld(String sourceName, String targetName) {
+        return CompletableFuture.supplyAsync(() -> {
+            World sourceWorld = Bukkit.getWorld(sourceName);
+            if (sourceWorld != null) {
+                sourceWorld.save();
+            }
+
+            File sourceFolder = new File(Bukkit.getWorldContainer(), sourceName);
+            File targetFolder = new File(Bukkit.getWorldContainer(), targetName);
+
+            if (!sourceFolder.exists() || targetFolder.exists()) {
+                return false;
+            }
+
+            try {
+                copyDirectory(sourceFolder, targetFolder);
+
+                File uidFile = new File(targetFolder, "uid.dat");
+                if (uidFile.exists()) {
+                    uidFile.delete();
+                }
+
+                WorldData sourceData = worldDataMap.get(sourceName);
+                if (sourceData != null) {
+                    WorldData clonedData = WorldData.builder(targetName)
+                            .environment(sourceData.environment())
+                            .worldType(sourceData.worldType())
+                            .generateStructures(sourceData.generateStructures())
+                            .seed(sourceData.seed())
+                            .pvpEnabled(sourceData.pvpEnabled())
+                            .keepSpawnInMemory(sourceData.keepSpawnInMemory())
+                            .autoLoad(sourceData.autoLoad())
+                            .generatorType(sourceData.generatorType())
+                            .build();
+                    worldDataMap.put(targetName, clonedData);
+                    saveWorldsDataAsync();
+                }
+
+                return Bukkit.getScheduler().callSyncMethod(plugin, () -> {
+                    World world = new WorldCreator(targetName).createWorld();
+                    return world != null;
+                }).get();
+
+            } catch (Exception e) {
+                plugin.getLogger().severe("Error cloning world: " + e.getMessage());
+                return false;
+            }
+        });
+    }
+
+    private void copyDirectory(File source, File target) throws IOException {
+        if (!target.exists()) {
+            target.mkdirs();
+        }
+
+        File[] files = source.listFiles();
+        if (files == null) return;
+
+        for (File file : files) {
+            if (file.getName().equals("uid.dat") || file.getName().equals("session.lock")) {
+                continue;
+            }
+
+            File targetFile = new File(target, file.getName());
+            if (file.isDirectory()) {
+                copyDirectory(file, targetFile);
+            } else {
+                Files.copy(file.toPath(), targetFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+            }
+        }
+    }
+
+    public CompletableFuture<Boolean> importWorld(String worldName) {
+        return CompletableFuture.supplyAsync(() -> {
+            File worldFolder = new File(Bukkit.getWorldContainer(), worldName);
+
+            if (!worldFolder.exists() || !worldFolder.isDirectory()) {
+                return false;
+            }
+
+            File levelDat = new File(worldFolder, "level.dat");
+            if (!levelDat.exists()) {
+                return false;
+            }
+
+            if (Bukkit.getWorld(worldName) != null) {
+                return false;
+            }
+
+            try {
+                World world = Bukkit.getScheduler().callSyncMethod(plugin, () -> {
+                    WorldCreator creator = new WorldCreator(worldName);
+                    return creator.createWorld();
+                }).get();
+
+                if (world != null) {
+                    WorldData data = WorldData.builder(worldName)
+                            .environment(world.getEnvironment())
+                            .seed(world.getSeed())
+                            .build();
+                    worldDataMap.put(worldName, data);
+                    saveWorldsDataAsync();
+                    return true;
+                }
+                return false;
+            } catch (Exception e) {
+                plugin.getLogger().severe("Error importing world: " + e.getMessage());
+                return false;
+            }
+        });
+    }
+
+    public List<String> getUnloadedWorlds() {
+        List<String> unloaded = new ArrayList<>();
+        File[] folders = Bukkit.getWorldContainer().listFiles();
+
+        if (folders == null) return unloaded;
+
+        for (File folder : folders) {
+            if (!folder.isDirectory()) continue;
+
+            File levelDat = new File(folder, "level.dat");
+            if (!levelDat.exists()) continue;
+
+            if (Bukkit.getWorld(folder.getName()) == null) {
+                unloaded.add(folder.getName());
+            }
+        }
+
+        return unloaded;
     }
 
     public World getWorld(String name) {
@@ -149,14 +284,6 @@ public class WorldManager {
 
     public List<World> getAllWorlds() {
         return Bukkit.getWorlds();
-    }
-
-    public WorldData getWorldData(String name) {
-        return worldDataMap.get(name);
-    }
-
-    public Collection<WorldData> getAllWorldData() {
-        return worldDataMap.values();
     }
 
     private void configureWorld(World world, WorldData data) {
